输入子系统驱动+分层分离驱动

--- a/jz2440_drive/01_first_drv/Makefile
+++ b/jz2440_drive/01_first_drv/Makefile
@@ -4,7 +4,7 @@ all:
 	make -C $(KERN_DIR) M=`pwd` modules
 
 clean:
-	make -C $(KERN_DIR) M=`pwd` modules clean
-	rm -rf modules.order
+	rm -f *.o *.ko *.mod.o *.mod.c *.symvers modul* .first*
+	rm -rf .tmp_versions
 
 obj-m += first_drv.o
